--- a/runtime/Makefile
+++ b/runtime/Makefile
@@ -1,1 +1,13 @@
+up:
+	docker compose up -d --build
+
+deploy:
+	docker compose build deployer
+	docker compose up deployer
+
+logs:
+	docker compose logs -f
+
+down:
+	docker compose down
 
