Add volume for application.yaml in docker-compose
Add volume mapping for application.yaml in Docker Compose.

--- a/runtime/docker-compose.yml
+++ b/runtime/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - "8080:8080"
     networks:
       - camunda-net
+    volumes:
+      - ./application.yaml:/camunda/conf/application.yaml
 
   deployer:
     build: ./deployer
