--- a/runtime/docker-compose.yml
+++ b/runtime/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     container_name: camunda
     ports:
       - "8080:8080"
+    environment:
+      - CAMUNDA_BPM_RUN_EXAMPLE_ENABLED=false
     networks:
       - camunda-net
     healthcheck:
