--- a/runtime/docker-compose.yml
+++ b/runtime/docker-compose.yml
@@ -13,11 +13,11 @@ services:
     networks:
       - camunda-net
     healthcheck:
-      test: ["CMD-SHELL", "curl -fsS http://localhost:8080/engine-rest/version >/dev/null || exit 1"]
-      interval: 10s
-      timeout: 3s
-      retries: 30
-      start_period: 30s
+      test: ["CMD", "curl", "-fsS", "http://localhost:8080/engine-rest/version"]
+      interval: 30s
+      timeout: 5s
+      retries: 10
+      start_period: 60ss
     restart: unless-stopped
     logging:
       driver: "json-file"
