--- a/runtime/docker-compose.yml
+++ b/runtime/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - "8080:8080"
     environment:
       - CAMUNDA_BPM_RUN_EXAMPLE_ENABLED=false
+      - JAVA_OPTS=-Xms128m -Xmx384m -XX:MaxMetaspaceSize=128m -XX:+UseG1GC -Djava.security.egd=file:/dev/./urandom
       # JVM tuning for small VM (1GB RAM)
       - JAVA_TOOL_OPTIONS=-Xms128m -Xmx384m -XX:MaxMetaspaceSize=128m -XX:+UseG1GC -XX:MaxGCPauseMillis=200
       # optional: reduce DB load
