--- a/runtime/docker-compose.yml
+++ b/runtime/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       interval: 30s
       timeout: 5s
       retries: 10
-      start_period: 60ss
+      start_period: 60s
     restart: unless-stopped
     logging:
       driver: "json-file"
